--- a/natc/styles/natc_markup.css
+++ b/natc/styles/natc_markup.css
@@ -141,6 +141,12 @@ a:hover {
 	font-weight: bold;
 }
 
+.alternate {
+	background-color: #000044;
+	font-size: 10pt;
+	font-weight: bold;
+}
+
 .heading {
 	background-color: #222222;
 	font-size: medium;
